add js command to start commentary section scroll bar from the bottom

--- a/auctions/templates/auctions/listing.html
+++ b/auctions/templates/auctions/listing.html
@@ -59,7 +59,7 @@
     <div class="d-flex justify-content-start row">
     <div class="d-flex flex-column col-md-8">
     <div class="container">
-    <div style="max-height: 30rem; overflow: auto;">
+    <div id="commentBox" style="max-height: 30rem; overflow: auto;">
         {% for comment in comments %}
             <div class="commented-section mt-2">
                 <div class="d-flex flex-row align-items-center commented-user">
