--- a/auctions/templates/auctions/layout.html
+++ b/auctions/templates/auctions/layout.html
@@ -55,7 +55,7 @@
                         </a>
             
                         <div class="dropdown-menu" aria-labelledby="dropdownMenuLink" x-placement="bottom-start">
-                            <a class="navlink-dropdown nav-link dropdown-item" href="{% url 'watchlist_page' %}">Watchlist</a>
+                            <a class="navlink-dropdown nav-link dropdown-item" href="{% url 'watchlist' %}">Watchlist</a>
                             <a class="navlink-dropdown nav-link dropdown-item" href="{% url 'create' %}">Create Listing</a>
                             <a class="navlink-dropdown nav-link dropdown-item" href="{% url 'my_listings' %}">My listings</a>
                             <a href="{% url 'logout' %}" class="navlink-dropdown nav-link dropdown-item">Log out</a>
